// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectMenu > renders basic case correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-0" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button">
      <!--v-if--><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders width icon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-3" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button"><span class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-academic-cap flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5"></span></span><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></button></div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders width required correctly 1`] = `
"<div class="" data-headlessui-state=""><input required="" class="" tabindex="-1" aria-hidden="true">
  <div id="headlessui-listbox-button-2" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button">
      <!--v-if--><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders width searchable correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-combobox-button-4" tabindex="-1" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button">
      <!--v-if--><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with custom name correctly 1`] = `
"<input style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;" type="hidden" hidden="" readonly="" name="SelectMenuName">
<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-1" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button">
      <!--v-if--><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with options correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-5" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class=""><button class="" type="button">
      <!--v-if--><span class=""> </span><span class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
    </button></div>
  <!--v-if-->
</div>"
`;
